--- a/styles/overall.css
+++ b/styles/overall.css
@@ -16,3 +16,15 @@ h1{
     border: 1px solid rgba(28, 28, 41, 0.12);
     background: var(--Dark-D0, #FFF);
 }
+.blackInput{
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.06);
+    background: rgba(255, 255, 255, 0.10);
+    color:white;
+}
+.float{
+    transition: all ease 0.2s;
+}
+#storiesZolotoe{
+    display: none;
+}
